@@ -1,3 +1,12 @@
+2004-05-19 Laurent Rabret <laurent.rabret at francetelecom.com>
+
+	* isis_constants.h: change the ISIS Hello interval from 1 to 10 (cisco's
+	  default value).
+	* isis_main.c: suppress a bad "#if 0 #endif" block for isis to be
+	  activated on startup.
+	* isis_tlv.[c|h]: LSP recognition of the ISIS Graceful Restart LSP (not
+	  implemented yet).
+
 2004-05-19 Rivo Nurges <rix at estpak.ee>
 
 	* *.c: Removing many useless net/ethernet.h includes and some tiny
